# mikadononperiodic

./: BendingEnergy.cpp  BendingEnergy.h  BendingGrad.cpp  BendingGrad.h  CMakeLists.txt  EnergyandGradients.cpp  EnergyandGradients.h  MikadoSlanted.kdev4  README.md  anglecount.m  autoplot.m  cgmethod.cpp  cgmethod.h  cgwoagony.cpp  cgwoagony.h  clusters.cpp  clusters.h  combineElementsOnMikado.h  connectivity.cpp  connectivity.h  cutsprings.cpp  cutsprings.h  exportfiles.h  importparam.h  main.cpp  makeSpringNetworks.cpp  makeSpringNetworks.h  makemikadonetwork.cpp  makemikadonetwork.h  minimizers.cpp  minimizers.h  networkonbackground.cpp  newbendinggrad.cpp  newbendinggrad.h  nrutil.cpp  nrutil.h  optimizer.cpp  plotsprings.m  plotsprings4.m  prestress.cpp  (+14 more)
release/: interface.py  makemovie.py  params.txt  plotmikado.py  plotnetwork.py
